// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addBook (JSON) works 1`] = `
Array [
  Object {
    "allowAnonLogging": false,
    "authors": Array [
      "Yaa Gyasi",
    ],
    "averageRating": 3,
    "canonicalVolumeLink": "https://books.google.com/books/about/Transcendent_Kingdom.html?hl=&id=ty19yQEACAAJ",
    "categories": Array [
      "Fiction",
    ],
    "contentVersion": "preview-1.0.0",
    "description": "\\"A novel about faith, science, religion, and family that tells the deeply moving portrait of a family of Ghanaian immigrants ravaged by depression and addiction and grief, narrated by a fifth year candidate in neuroscience at Stanford school of medicine studying the neural circuits of reward seeking behavior in mice\\"--",
    "imageLinks": Object {
      "smallThumbnail": "http://books.google.com/books/content?id=ty19yQEACAAJ&printsec=frontcover&img=1&zoom=5&source=gbs_api",
      "thumbnail": "http://books.google.com/books/content?id=ty19yQEACAAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api",
    },
    "industryIdentifiers": Array [
      Object {
        "identifier": "0525658181",
        "type": "ISBN_10",
      },
      Object {
        "identifier": "9780525658184",
        "type": "ISBN_13",
      },
    ],
    "infoLink": "http://books.google.com/books?id=ty19yQEACAAJ&dq=isbn:0525658181&hl=&source=gbs_api",
    "language": "en",
    "maturityRating": "NOT_MATURE",
    "pageCount": 288,
    "panelizationSummary": Object {
      "containsEpubBubbles": false,
      "containsImageBubbles": false,
    },
    "previewLink": "http://books.google.com/books?id=ty19yQEACAAJ&dq=isbn:0525658181&hl=&cd=1&source=gbs_api",
    "printType": "BOOK",
    "publishedDate": "2020",
    "publisher": "Knopf Publishing Group",
    "ratingsCount": 1,
    "readingModes": Object {
      "image": false,
      "text": false,
    },
    "title": "Transcendent Kingdom",
  },
  Object {
    "authors": Array [
      "Yaa Gyasi",
    ],
    "canonicalVolumeLink": "https://books.google.com/books/about/Transcendent_Kingdom.html?hl=&id=ty19yQEACAAJ",
    "categories": Array [
      "Fiction",
    ],
    "dateFinished": "2020-09-12",
    "description": "A novel about faith, science, religion, and family that tells the deeply moving portrait of a family of Ghanaian immigrants ravaged by depression and addiction and grief, narrated by a fifth year candidate in neuroscience at Stanford school of medicine studying the neural circuits of reward seeking behavior in mice…",
    "imageLinks": Object {
      "smallThumbnail": "https://books.google.com/books/content?id=ty19yQEACAAJ&printsec=frontcover&img=1&zoom=5&source=gbs_api",
      "thumbnail": "https://books.google.com/books/content?id=ty19yQEACAAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api",
    },
    "industryIdentifiers": Array [
      Object {
        "identifier": "0525658181",
        "type": "ISBN_10",
      },
      Object {
        "identifier": "9780525658184",
        "type": "ISBN_13",
      },
    ],
    "isbn": "0525658181",
    "language": "en",
    "notes": "Amazing!",
    "pageCount": 288,
    "printType": "BOOK",
    "publishedDate": "2020",
    "title": "Transcendent Kingdom",
  },
]
`;

exports[`addBook (JSON) works, empty file 1`] = `
Array [
  Object {
    "authors": Array [
      "Yaa Gyasi",
    ],
    "canonicalVolumeLink": "https://books.google.com/books/about/Transcendent_Kingdom.html?hl=&id=ty19yQEACAAJ",
    "categories": Array [
      "Fiction",
    ],
    "dateFinished": "2020-09-12",
    "description": "A novel about faith, science, religion, and family that tells the deeply moving portrait of a family of Ghanaian immigrants ravaged by depression and addiction and grief, narrated by a fifth year candidate in neuroscience at Stanford school of medicine studying the neural circuits of reward seeking behavior in mice…",
    "imageLinks": Object {
      "smallThumbnail": "https://books.google.com/books/content?id=ty19yQEACAAJ&printsec=frontcover&img=1&zoom=5&source=gbs_api",
      "thumbnail": "https://books.google.com/books/content?id=ty19yQEACAAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api",
    },
    "industryIdentifiers": Array [
      Object {
        "identifier": "0525658181",
        "type": "ISBN_10",
      },
      Object {
        "identifier": "9780525658184",
        "type": "ISBN_13",
      },
    ],
    "isbn": "0525658181",
    "language": "en",
    "notes": "Brilliant!",
    "pageCount": 288,
    "printType": "BOOK",
    "publishedDate": "2020",
    "title": "Transcendent Kingdom",
  },
]
`;

exports[`addBook (JSON) works, no images 1`] = `
Array [
  Object {
    "allowAnonLogging": false,
    "authors": Array [
      "Yaa Gyasi",
    ],
    "averageRating": 3,
    "canonicalVolumeLink": "https://books.google.com/books/about/Transcendent_Kingdom.html?hl=&id=ty19yQEACAAJ",
    "categories": Array [
      "Fiction",
    ],
    "contentVersion": "preview-1.0.0",
    "description": "\\"A novel about faith, science, religion, and family that tells the deeply moving portrait of a family of Ghanaian immigrants ravaged by depression and addiction and grief, narrated by a fifth year candidate in neuroscience at Stanford school of medicine studying the neural circuits of reward seeking behavior in mice\\"--",
    "imageLinks": Object {
      "smallThumbnail": "http://books.google.com/books/content?id=ty19yQEACAAJ&printsec=frontcover&img=1&zoom=5&source=gbs_api",
      "thumbnail": "http://books.google.com/books/content?id=ty19yQEACAAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api",
    },
    "industryIdentifiers": Array [
      Object {
        "identifier": "0525658181",
        "type": "ISBN_10",
      },
      Object {
        "identifier": "9780525658184",
        "type": "ISBN_13",
      },
    ],
    "infoLink": "http://books.google.com/books?id=ty19yQEACAAJ&dq=isbn:0525658181&hl=&source=gbs_api",
    "language": "en",
    "maturityRating": "NOT_MATURE",
    "pageCount": 288,
    "panelizationSummary": Object {
      "containsEpubBubbles": false,
      "containsImageBubbles": false,
    },
    "previewLink": "http://books.google.com/books?id=ty19yQEACAAJ&dq=isbn:0525658181&hl=&cd=1&source=gbs_api",
    "printType": "BOOK",
    "publishedDate": "2020",
    "publisher": "Knopf Publishing Group",
    "ratingsCount": 1,
    "readingModes": Object {
      "image": false,
      "text": false,
    },
    "title": "Transcendent Kingdom",
  },
  Object {
    "authors": Array [
      "Yaa Gyasi",
    ],
    "canonicalVolumeLink": "https://books.google.com/books/about/Transcendent_Kingdom.html?hl=&id=ty19yQEACAAJ",
    "categories": Array [
      "Fiction",
    ],
    "dateFinished": "2020-09-12",
    "description": "A novel about faith, science, religion, and family that tells the deeply moving portrait of a family of Ghanaian immigrants ravaged by depression and addiction and grief, narrated by a fifth year candidate in neuroscience at Stanford school of medicine studying the neural circuits of reward seeking behavior in mice…",
    "imageLinks": Object {},
    "industryIdentifiers": Array [
      Object {
        "identifier": "0525658181",
        "type": "ISBN_10",
      },
      Object {
        "identifier": "9780525658184",
        "type": "ISBN_13",
      },
    ],
    "isbn": "0525658181",
    "language": "en",
    "notes": "Amazing!",
    "pageCount": 288,
    "printType": "BOOK",
    "publishedDate": "2020",
    "title": "Transcendent Kingdom",
  },
]
`;
